crates/tui/src/view/snapshots/tui__view__item__tests__another_harness_body.snap
---
source: crates/tui/src/view/item_tests.rs
expression: "rows.join(\"\\n\")"
---
fix the parser › ◆ task j_1                                                    ✕
● running · harness claude · model other/model · — · 0s · session s_ddd · ■ stop
Output since this terminal attached · /tmp/other.out














● claude  other/model
  task j_1
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
$0.00
1 delegate running
