crates/tui/src/view/snapshots/tui__view__item__tests__breadcrumb_names_main.snap
---
source: crates/tui/src/view/item_tests.rs
expression: "rows.join(\"\\n\")"
---

main › ◆ review the parser                                                     ✕
⠋ running · harness fiber · model test/model · 0 calls · 5s · session s · ■ stop














⠋ fiber  test/model
  review the parser
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
test/model · $0.00
1 delegate running
