crates/tui/src/view/snapshots/tui__view__item__tests__breadcrumb_names_the_session.snap
---
source: crates/tui/src/view/item_tests.rs
expression: "rows.join(\"\\n\")"
---
fix the parser › ◆ review the parser                                           ✕
⠋ running · harness fiber · model test/model · 0 calls · 5s · session s · ■ stop















⠋ fiber  test/model
  review the parser
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
$0.00
1 delegate running
